Fixed Views for smaller devices to stop text overflow

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -207,13 +207,14 @@ footer {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/images/pexels-olly-3768131.jpg");
 
   /* Set a specific height */
-  height: 50%;
+  height: 50vh;
 
-  /* Position and center the image to scale nicely on all screens */
+  /* Position and center the image */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  overflow: hidden;
 }
 
 /* Place text in the middle of the image */
@@ -222,8 +223,10 @@ footer {
   font-weight: 600;
   text-align: center;
   position: absolute;
-  top: 90%;
+  top: 70%;
+  bottom: 20%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%);
   color: #CADF9E;
 }
@@ -292,7 +295,7 @@ footer {
 }
 
 /* Adjustments for smaller screens */
-@media (max-width: 995px) {
+@media (max-width: 1000px) {
   header h1 {
     font-weight: 600;
   }
@@ -302,9 +305,22 @@ footer {
     padding-right: 3%;
   }
 
+  .hero-text {
+    font-size: 1.2rem; 
+    padding: 10px;
+  }
+
+  .welcome-header {
+    font-size: 1.8rem; 
+  }
+
+  .welcome-text {
+    font-size: 1rem; 
+  }
+
   .client-image img {
-      width: 50%; /* Or whatever percentage suits your design */
-      height: auto; /* Maintain aspect ratio */
+      width: 50%; 
+      height: auto;
   }
 
   .bottom-margin{
@@ -321,3 +337,19 @@ footer {
   }
 }
 
+/* Adjustments for small screens */
+@media (max-width: 600px) { 
+  .hero-text {
+    top: 65%;
+    font-size: 1rem;
+    padding: 5px;
+  }
+
+  .welcome-header {
+    font-size: 1.5rem;
+  }
+
+  .welcome-text {
+    font-size: 0.9rem;
+  }
+}
